--- a/app/src/main/res/drawable/btn_gray_round.xml
+++ b/app/src/main/res/drawable/btn_gray_round.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
     android:shape="rectangle" >
-    <solid android:color="@color/mainColor" />
+    <solid android:color="@color/inactiveText" />
 
     <corners
         android:radius="30dp"
