--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -6,51 +6,67 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal|center_vertical"
     android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:orientation="vertical"
         android:background="@drawable/layout_rounded_white"
-        android:padding="10dp"
-        android:layout_margin="10dp"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:orientation="vertical">
-    <TextView
-        android:id="@+id/timerTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/make_Title"
-        android:text="스톱 워치" />
-    <TextView
-        android:id="@+id/textViewTime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/maplestorylight"
-        style="@style/make_Timer"
-        android:padding="40dp"
-        android:layout_gravity="center"
-        android:text="00:00:00" />
-        <LinearLayout
-            android:layout_width="wrap_content"
+        android:layout_margin="10dp">
+
+        <TextView
+            android:id="@+id/timerTitle"
+            style="@style/make_Title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:padding="10dp"
-            android:layout_margin="10dp"
-            android:orientation="horizontal">
-    <ImageButton
-        android:id="@+id/imageButtonStart"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/buttonReset"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="초기화" />
-    <Button
-        android:id="@+id/buttonQuit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="종료" />
+            android:gravity="top"
+            android:text="스톱 워치"
+            android:layout_margin="20dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:layout_gravity="center_horizontal|center_vertical"
+
+
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <TextView
+                android:id="@+id/textViewTime"
+                style="@style/make_Timer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/maplestorylight"
+                android:gravity="center"
+                android:text="00:00:00" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/imageButtonStart"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/btn_yellow_round"
+                    android:text="실행"
+                    android:textColor="#ffffff"
+                    android:layout_margin="30dp"/>
+
+                <Button
+                    android:id="@+id/buttonQuit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/btn_gray_round"
+                    android:text="종료"
+                    android:textColor="#ffffff"
+                    android:layout_margin="30dp"/>
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
