--- a/app/src/main/res/layout/fragment_mystudy.xml
+++ b/app/src/main/res/layout/fragment_mystudy.xml
@@ -18,5 +18,45 @@
 
     </androidx.appcompat.widget.Toolbar>
 
+    <item
+        android:id="@+id/menu1"
+        android:layout_width="match_parent"
+        android:layout_height="70dp">
+        android:icon="@drawble/ic_icon"
+        android:title="Item1"
+        app:showAsAction="never"></item>
+
+    <item
+        android:id="@+id/menu2"
+        android:layout_width="match_parent"
+        android:layout_height="70dp">
+        android:title="Item2"
+        app:showAsAction="never"/>
+    </item>
+
+    <item
+        android:id="@+id/menu3"
+        android:layout_width="match_parent"
+        android:layout_height="70dp">
+        android:title="Item3"
+        app:showAsAction="never"/>
+    </item>
+
+    <item
+        android:id="@+id/menu4"
+        android:layout_width="match_parent"
+        android:layout_height="70dp">
+        android:title="Item4"
+        app:showAsAction="never"/>
+    </item>
+
+    <item
+        android:id="@+id/menu5"
+        android:layout_width="match_parent"
+        android:layout_height="70dp">
+        android:title="Item5"
+        app:showAsAction="never"/>
+    </item>
+
 
 </LinearLayout>
