--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -66,6 +66,7 @@
         android:textColor="#ffffff"
         android:background="@drawable/btn_red_round"
         android:minHeight="0dp"
+        android:layout_marginVertical="8dp"
         android:paddingVertical="5dp"
         android:paddingHorizontal="14dp"/>
 
