--- a/app/src/main/res/layout/activity_makeroom.xml
+++ b/app/src/main/res/layout/activity_makeroom.xml
@@ -30,7 +30,8 @@
         android:background="@drawable/layout_rounded_white"
         android:padding="10dp"
         android:layout_margin="10dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
     <TextView
         android:layout_width="wrap_content"
@@ -43,7 +44,8 @@
         <ScrollView
             android:id="@+id/ScrollView0"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="500dp"
+            android:layout_gravity="center_vertical">
 
 
             <LinearLayout
@@ -76,6 +78,8 @@
                         android:layout_marginLeft="3dp"
                         android:layout_marginRight="3dp"
                         android:layout_marginBottom="7dp"
+                        android:inputType="text"
+                        android:maxLines="1"
                         android:background="@drawable/edittext_rounded_corner_rectangle"
                         android:padding="5dp" />
 
@@ -494,7 +498,28 @@
                         </LinearLayout>
 
                     </LinearLayout>
+                    <TextView
+                        style="@style/make_Big"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingVertical="5dp"
+                        android:layout_marginTop="5dp"
+                        android:text="매주 달성할 목표를 적어주세요" />
+
+                    <EditText
+                        android:id="@+id/et_roomtodo"
+                        android:layout_width="300dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="3dp"
+                        android:layout_marginBottom="7dp"
+                        android:inputType="text"
+                        android:maxLines="1"
+                        android:background="@drawable/edittext_rounded_corner_rectangle"
+                        android:paddingVertical="5dp" />
+
                 </LinearLayout>
+
             </LinearLayout>
         </ScrollView>
 
