리사이클러뷰를 쪼큼 바꿨어요

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,11 +26,29 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/roomrecyclerview"
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-<!--
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/rectangle_569"
+            android:layout_width="390dp"
+            android:layout_height="200dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="150dp"
+            android:background="@drawable/rectangle_569" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/roomrecyclerview"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="150dp"
+            android:layout_height="wrap_content" />
+
+    </FrameLayout>
+
+    <!--
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
