--- a/app/src/main/res/layout/activity_makeroom.xml
+++ b/app/src/main/res/layout/activity_makeroom.xml
@@ -38,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         style="@style/make_Title"
+        android:layout_margin="7dp"
         android:text="스터디 개설" />
 
 
@@ -457,7 +458,7 @@
                                 android:background="@drawable/btn_trans"
                                 android:text="오후 11:00" />
                         </LinearLayout>
-
+                    </LinearLayout>
 
                         <TextView
                             style="@style/make_Big"
@@ -471,13 +472,14 @@
                             style="@style/make_Sub2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:padding="5dp"
+                            android:paddingHorizontal="5dp"
                             android:text="인증 방식이 횟수일 경우 인증 횟수를 설정해야 합니다." />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="7dp"
+                            android:layout_marginTop="5dp"
                             android:orientation="horizontal"
                             android:paddingHorizontal="5dp">
 
@@ -497,12 +499,12 @@
                                 android:text="회" />
                         </LinearLayout>
 
-                    </LinearLayout>
+
                     <TextView
                         style="@style/make_Big"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingVertical="5dp"
+                        android:paddingHorizontal="5dp"
                         android:layout_marginTop="5dp"
                         android:text="매주 달성할 목표를 적어주세요" />
 
@@ -516,8 +518,45 @@
                         android:inputType="text"
                         android:maxLines="1"
                         android:background="@drawable/edittext_rounded_corner_rectangle"
-                        android:paddingVertical="5dp" />
+                        android:padding="5dp" />
+                    <TextView
+                        style="@style/make_Big"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="5dp"
+                        android:layout_marginTop="5dp"
+                        android:text="스터디 기간 설정" />
 
+                    <TextView
+                        style="@style/make_Sub2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="5dp"
+                        android:text="최대 25주까지 스터디를 진행할 수 있습니다." />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="7dp"
+                        android:orientation="horizontal"
+                        android:paddingHorizontal="5dp">
+
+                        <EditText
+                            android:id="@+id/et_roomweek"
+                            android:layout_width="100dp"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/edittext_rounded_corner_rectangle"
+                            android:inputType="numberSigned"
+                            android:paddingVertical="5dp" />
+
+                        <TextView
+                            style="@style/make_Big"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="5dp"
+                            android:text="주" />
+                    </LinearLayout>
                 </LinearLayout>
 
             </LinearLayout>
