--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -65,4 +65,8 @@
         <item name="colorSwitchThumbNormal">@color/lightlightGray
         </item>
     </style>
+    <style name = "font_home">
+        <item name = "android:textSize">30dp</item>
+        <item name = "android:textColor">#ffffff</item>
+    </style>
 </resources>
