--- a/app/src/main/res/layout/fragment_search_all.xml
+++ b/app/src/main/res/layout/fragment_search_all.xml
@@ -7,7 +7,7 @@
     android:background="#ECEBEB">
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/button_sort"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="꿀 순"
