--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -69,4 +69,8 @@
         <item name = "android:textSize">30dp</item>
         <item name = "android:textColor">#ffffff</item>
     </style>
+    <style name = "font_study_name">
+        <item name = "android:textSize">25dp</item>
+        <item name = "android:textColor">#ffffff</item>
+    </style>
 </resources>
