--- a/app/src/main/res/layout/activity_makeroom.xml
+++ b/app/src/main/res/layout/activity_makeroom.xml
@@ -499,17 +499,23 @@
                                 android:text="회" />
                         </LinearLayout>
 
-
                     <TextView
                         style="@style/make_Big"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingHorizontal="5dp"
                         android:layout_marginTop="5dp"
-                        android:text="매주 달성할 목표를 적어주세요" />
+                        android:text="주차 별 목차 설정" />
+                    <TextView
+                        style="@style/make_Sub2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="5dp"
+                        android:layout_marginTop="5dp"
+                        android:text="1주차에 달성할 목표를 적어주세요" />
 
                     <EditText
-                        android:id="@+id/et_roomtodo"
+                        android:id="@+id/et_roomtodo1"
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
@@ -520,43 +526,139 @@
                         android:background="@drawable/edittext_rounded_corner_rectangle"
                         android:padding="5dp" />
                     <TextView
-                        style="@style/make_Big"
+                        style="@style/make_Sub2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingHorizontal="5dp"
                         android:layout_marginTop="5dp"
-                        android:text="스터디 기간 설정" />
+                        android:text="2주차에 달성할 목표를 적어주세요" />
 
+                    <EditText
+                        android:id="@+id/et_roomtodo2"
+                        android:layout_width="300dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="3dp"
+                        android:layout_marginBottom="7dp"
+                        android:inputType="text"
+                        android:maxLines="1"
+                        android:background="@drawable/edittext_rounded_corner_rectangle"
+                        android:padding="5dp" />
                     <TextView
                         style="@style/make_Sub2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingHorizontal="5dp"
-                        android:text="최대 25주까지 스터디를 진행할 수 있습니다." />
+                        android:layout_marginTop="5dp"
+                        android:text="3주차에 달성할 목표를 적어주세요" />
 
-                    <LinearLayout
+                    <EditText
+                        android:id="@+id/et_roomtodo3"
+                        android:layout_width="300dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="3dp"
+                        android:layout_marginBottom="7dp"
+                        android:inputType="text"
+                        android:maxLines="1"
+                        android:background="@drawable/edittext_rounded_corner_rectangle"
+                        android:padding="5dp" />
+                    <TextView
+                        style="@style/make_Sub2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:paddingHorizontal="5dp"
                         android:layout_marginTop="5dp"
+                        android:text="4주차에 달성할 목표를 적어주세요" />
+
+                    <EditText
+                        android:id="@+id/et_roomtodo4"
+                        android:layout_width="300dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="3dp"
                         android:layout_marginBottom="7dp"
-                        android:orientation="horizontal"
-                        android:paddingHorizontal="5dp">
+                        android:inputType="text"
+                        android:maxLines="1"
+                        android:background="@drawable/edittext_rounded_corner_rectangle"
+                        android:padding="5dp" />
+                    <TextView
+                        style="@style/make_Sub2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="5dp"
+                        android:layout_marginTop="5dp"
+                        android:text="5주차에 달성할 목표를 적어주세요" />
 
-                        <EditText
-                            android:id="@+id/et_roomweek"
-                            android:layout_width="100dp"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/edittext_rounded_corner_rectangle"
-                            android:inputType="numberSigned"
-                            android:paddingVertical="5dp" />
+                    <EditText
+                        android:id="@+id/et_roomtodo5"
+                        android:layout_width="300dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="3dp"
+                        android:layout_marginBottom="7dp"
+                        android:inputType="text"
+                        android:maxLines="1"
+                        android:background="@drawable/edittext_rounded_corner_rectangle"
+                        android:padding="5dp" />
+                    <TextView
+                        style="@style/make_Sub2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="5dp"
+                        android:layout_marginTop="5dp"
+                        android:text="6주차에 달성할 목표를 적어주세요" />
 
-                        <TextView
-                            style="@style/make_Big"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="5dp"
-                            android:text="주" />
-                    </LinearLayout>
+                    <EditText
+                        android:id="@+id/et_roomtodo6"
+                        android:layout_width="300dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="3dp"
+                        android:layout_marginBottom="7dp"
+                        android:inputType="text"
+                        android:maxLines="1"
+                        android:background="@drawable/edittext_rounded_corner_rectangle"
+                        android:padding="5dp" />
+                    <TextView
+                        style="@style/make_Sub2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="5dp"
+                        android:layout_marginTop="5dp"
+                        android:text="7주차에 달성할 목표를 적어주세요" />
+
+                    <EditText
+                        android:id="@+id/et_roomtodo7"
+                        android:layout_width="300dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="3dp"
+                        android:layout_marginBottom="7dp"
+                        android:inputType="text"
+                        android:maxLines="1"
+                        android:background="@drawable/edittext_rounded_corner_rectangle"
+                        android:padding="5dp" />
+                    <TextView
+                        style="@style/make_Sub2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="5dp"
+                        android:layout_marginTop="5dp"
+                        android:text="8주차에 달성할 목표를 적어주세요" />
+
+                    <EditText
+                        android:id="@+id/et_roomtodo8"
+                        android:layout_width="300dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="3dp"
+                        android:layout_marginBottom="7dp"
+                        android:inputType="text"
+                        android:maxLines="1"
+                        android:background="@drawable/edittext_rounded_corner_rectangle"
+                        android:padding="5dp" />
+
                 </LinearLayout>
 
             </LinearLayout>
