--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -73,4 +73,12 @@
         <item name = "android:textSize">25dp</item>
         <item name = "android:textColor">#ffffff</item>
     </style>
+    <style name = "btn_style">
+        <item name = "android:textSize">15dp</item>
+        <item name = "android:textColor">#ffffff</item>
+        <item name = "android:minHeight">0dp</item>
+        <item name = "android:layout_marginVertical">5dp</item>
+        <item name = "android:paddingHorizontal">14dp</item>
+
+    </style>
 </resources>
