--- a/app/src/main/res/layout/fragment_mystudy.xml
+++ b/app/src/main/res/layout/fragment_mystudy.xml
@@ -49,11 +49,12 @@
 
         </FrameLayout>
 
-        <FrameLayout
+        <ImageView
+            android:id="@+id/imageView2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="300dp"
+            app:srcCompat="@drawable/unity" />
 
-        </FrameLayout>
     </LinearLayout>
 
 
