디자인 변경

--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -32,6 +32,7 @@
         android:layout_margin="30dp"
         android:layout_marginBottom="20dp"
         android:paddingTop="20dp"
+        android:paddingBottom="20dp"
         android:background="@drawable/background_gray">
 
         <LinearLayout
