--- a/app/src/main/res/layout/fragment_weekly.xml
+++ b/app/src/main/res/layout/fragment_weekly.xml
@@ -12,6 +12,7 @@
         android:id="@+id/recyclerviewWeekly"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="20dp"></androidx.recyclerview.widget.RecyclerView>
+        android:layout_margin="20dp">
+    </androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
